# book-bitch

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: chunker.py  config.py  ingest.py  main.py  models.py
frontend/: ui.py
tests/: test_chunker.py
