[project]
name = "book-bitch"
version = "0.1.0"
description = "FastAPI + Streamlit RAG"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pdfplumber",
  "openai",
  "pinecone",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "requests",
  "streamlit"
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"